--- a/kazinvest-front/package.json
+++ b/kazinvest-front/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "mapbox-gl": "^0.49.0",
     "vue": "^2.5.17",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
