--- a/kazinvest-front/package.json
+++ b/kazinvest-front/package.json
@@ -8,10 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "mapbox-gl": "^0.49.0",
     "vue": "^2.5.17",
-    "vuex": "^3.0.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
