--- a/back/package.json
+++ b/back/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "express": "^4.16.3",
     "express-async-router": "^0.1.13",
     "nodemon": "^1.18.4",
