--- a/back/package.json
+++ b/back/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "bcrypt": "^3.0.2",
+    "cryptr": "^4.0.0",
     "express": "^4.16.3",
     "express-async-router": "^0.1.13",
     "nodemon": "^1.18.4",
