--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,9 @@
     "express": "^4.16.3",
     "express-async-router": "^0.1.13",
     "nodemon": "^1.18.4",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "redis": "^2.8.0",
+    "redis-server": "^1.2.2"
   },
   "devDependencies": {},
   "scripts": {
