--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@turf/turf": "^5.1.6",
+    "j": "^1.0.0",
+    "jspdf": "^1.4.1",
+    "jspdf-autotable": "^2.3.5",
     "mapbox-gl": "^0.49.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
