--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "mapbox-gl": "^0.49.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-wysiwyg": "^1.7.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
