--- a/back/package.json
+++ b/back/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cryptr": "^4.0.0",
+    "email": "^0.2.6",
     "express": "^4.16.3",
     "express-async-router": "^0.1.13",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
     "redis": "^2.8.0",
