--- a/back/package.json
+++ b/back/package.json
@@ -13,7 +13,8 @@
     "nodemon": "^1.18.4",
     "pg": "^7.4.3",
     "redis": "^2.8.0",
-    "redis-server": "^1.2.2"
+    "redis-server": "^1.2.2",
+    "sendmail": "^1.4.1"
   },
   "devDependencies": {},
   "scripts": {
