--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,8 @@
     "jspdf": "^1.4.1",
     "jspdf-autotable": "^2.3.5",
     "mapbox-gl": "^0.49.0",
+    "nodemailer": "^0.7.1",
+    "sendmail": "^1.4.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-wysiwyg": "^1.7.2",
